# Magenta

./: CMakeLists.txt  README.md  demo.c
glad/include/glad/: glad.h
glad/src/: glad.c
include/: GLRenderer.h  MAGElement.h  MAGVector.h  MAGWindow.h  Magenta.h
include/platform/Linux/: LINUX_MAGWindow.h
include/platform/Windows/: WIN32_MAGWindow.h
src/: GLRenderer.c  MAGElement.c  MAGWindow.c  stb_impl.c
src/platform/Linux/: LINUX_MAGWindow.c
src/platform/Windows/: WIN32_MAGWindow.c
