cmake_minimum_required(VERSION 3.15)
project(Magenta)
file(GLOB SOURCES "src/*.c" "glad/src/*.c")
add_executable(Demo "demo.c")
add_library(Magenta STATIC "${SOURCES}")
target_include_directories(Demo PUBLIC include)
target_include_directories(Magenta PUBLIC include)
target_include_directories(Magenta PUBLIC glad/include)
target_link_libraries(Magenta PUBLIC OpenGL32)
target_link_libraries(Demo PUBLIC Magenta)