cmake_minimum_required(VERSION 3.15)
project(Magenta)

if(WIN32)
    message("Creating build files for windows")
    add_definitions(-DWindows)
    file(GLOB PLATFORM_SOURCE "src/platform/Windows/*.c")
    set(PLATFORM_INCLUDE "include/platform/Windows")
endif(WIN32)
if(UNIX)
    message("Creating build files for Linux")
    add_definitions(-DLinux)
    file(GLOB PLATFORM_SOURCE "src/platform/Linux/*.c")
    set(PLATFORM_INCLUDE "include/platform/Linux")
endif(UNIX)

file(GLOB SOURCES "src/*.c" "glad/src/*.c" "stb/*.h")
message("USING:\n   ${PLATFORM_SOURCE}\n   ${PLATFORM_INCLUDE}")
message("${CMAKE_SOURCE_DIR}")
add_executable(Demo "demo.c")
add_library(Magenta STATIC ${SOURCES} ${PLATFORM_SOURCE})

target_include_directories(Demo PUBLIC include)
target_include_directories(Magenta PUBLIC include PRIVATE glad/include stb ${PLATFORM_INCLUDE})

if(WIN32)
    target_link_libraries(Magenta PUBLIC OpenGL32)
endif(WIN32)
if(UNIX)
    target_link_libraries(Magenta PUBLIC "-lX11 -lGL -lGLU" ${CMAKE_DL_LIBS} )
endif(UNIX)

target_link_libraries(Demo PUBLIC Magenta)
